--- a/pangu-framework-base/pom.xml
+++ b/pangu-framework-base/pom.xml
@@ -103,7 +103,7 @@
 
     <profiles>
         <profile>
-            <id>deploy</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
