--- a/pangu-framework-parent/pom.xml
+++ b/pangu-framework-parent/pom.xml
@@ -48,8 +48,9 @@
         <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <dubbo-spring-boot-starter.version>2.7.4.1</dubbo-spring-boot-starter.version>
         <dubbo-registry-nacos.version>2.7.4.1</dubbo-registry-nacos.version>
-        <nacos-config-spring-boot-starter.version>0.2.10</nacos-config-spring-boot-starter.version>
-        <nacos-config-spring-boot-actuator.version>0.2.10</nacos-config-spring-boot-actuator.version>
+        <!--TODO 0.2.10会出现获取不到配置和监听不到配置变更的问题，等待确认 -->
+        <nacos-config-spring-boot-starter.version>0.2.7</nacos-config-spring-boot-starter.version>
+        <nacos-config-spring-boot-actuator.version>0.2.7</nacos-config-spring-boot-actuator.version>
         <mybatis-plus-boot-starter.version>3.4.3.2</mybatis-plus-boot-starter.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <hutool-all.version>5.7.11</hutool-all.version>
@@ -183,7 +184,7 @@
 
     <profiles>
         <profile>
-            <id>deploy</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
