--- a/pangu-framework-builder-maven-plugin/pom.xml
+++ b/pangu-framework-builder-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-framework-builder-maven-plugin</artifactId>
-    <version>5.0.1</version>
+    <version>5.0.2</version>
     <packaging>maven-plugin</packaging>
     <name>pangu-framework-builder-maven-plugin</name>
     <description>pangu framework code builder maven-plugin</description>
@@ -41,6 +41,7 @@
         <lombok.version>1.18.20</lombok.version>
         <maven-plugin-api.version>3.8.2</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.6.1</maven-plugin-annotations.version>
+        <maven-plugin-plugin.versionm>3.5.2</maven-plugin-plugin.versionm>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
@@ -57,6 +58,7 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>${maven-plugin-annotations.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -97,6 +99,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>${maven-plugin-plugin.versionm}</version>
+                <configuration>
+                    <goalPrefix>pangu</goalPrefix>
+                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+                </configuration>
             </plugin>
         </plugins>
     </build>
