--- a/pangu-framework-base/pom.xml
+++ b/pangu-framework-base/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-framework-base</artifactId>
-    <version>5.0.1</version>
+    <version>5.0.2</version>
     <packaging>jar</packaging>
     <name>pangu-framework-base</name>
     <description>pangu development framework</description>
@@ -118,6 +118,18 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>default</id>
+            <repositories>
+                <repository>
+                    <id>aliyun</id>
+                    <url>https://maven.aliyun.com/repository/public</url>
+                </repository>
+            </repositories>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
         <profile>
             <id>release</id>
             <build>
