--- a/pangu-framework-generator-maven-plugin/pom.xml
+++ b/pangu-framework-generator-maven-plugin/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-framework-builder-maven-plugin</artifactId>
-    <version>5.0.2</version>
+    <version>5.0.4</version>
     <packaging>maven-plugin</packaging>
-    <name>pangu-framework-builder-maven-plugin</name>
-    <description>pangu framework code builder maven-plugin</description>
+    <name>pangu-framework-generator-maven-plugin</name>
+    <description>pangu framework code generator maven-plugin</description>
     <url>https://gitee.com/pulanos/pangu-framework</url>
 
     <licenses>
