--- a/pangu-framework-parent/pom.xml
+++ b/pangu-framework-parent/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-framework-parent</artifactId>
-    <version>5.0.1</version>
+    <version>5.0.2</version>
     <packaging>pom</packaging>
     <name>pangu-framework-parent</name>
     <description>pangu development framework</description>
@@ -55,6 +55,7 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <hutool-all.version>5.7.11</hutool-all.version>
         <lombok.version>1.18.20</lombok.version>
+        <spring-boot-maven-plugin.version>2.5.4</spring-boot-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
