--- a/pangu-framework-generator-maven-plugin/pom.xml
+++ b/pangu-framework-generator-maven-plugin/pom.xml
@@ -39,6 +39,7 @@
         <java.version>1.8</java.version>
         <hutool-all.version>5.7.13</hutool-all.version>
         <lombok.version>1.18.20</lombok.version>
+        <enjoy.version>4.9.16</enjoy.version>
         <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
         <logback-classic.version>1.2.5</logback-classic.version>
         <commons-dbutils.version>1.7</commons-dbutils.version>
@@ -67,6 +68,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool-all.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jfinal</groupId>
+            <artifactId>enjoy</artifactId>
+            <version>${enjoy.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
